--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,9 +38,15 @@ code {
   align-items: center;
 }
 
-.head-bar h1 {
-  color: #003d00;
+#head {
+  background-color: #f2c993;
+  color: #253d25;
   text-align: center;
+  margin-top: 0;
+}
+
+#head h1 {
+  margin: 0;
 }
 
 .nav-button {
@@ -48,54 +54,77 @@ code {
   height: 47px;
   width: 87px;
   border-radius: 15px;
-  background-color: #006600;
-  border: 2px solid #003d00;
+  background-color: #3d644a;
+  border: 2px solid #253d25;
 }
 
 .nav-button:hover {
   opacity: .5;
+  cursor: pointer;
 }
 
 #home-body {
-  display: grid;
-  grid-template-columns:5fr 1fr;
-  grid-template-rows: 1fr 6fr 1fr
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#home-body h1 {
-  width: 100%;
-  text-align: center;
-  grid-column: 1 / 2;
-  grid-row: 1;
-}
-
-#home-body img {
-  max-width: 700px;
-  border: 1px solid grey;
-  justify-self: center;
-  grid-row: 2;
-  grid-column: 1;
-  margin: 10px 0 10px 0
+#cover {
+  margin: 20px 10%;
+  position: relative;
 }
 
 #mission-statement {
-  border: 1px solid grey;
-  justify-self: center;
+  position: absolute;
   text-align: center;
-  grid-row: 2;
-  grid-column: 2;
-  margin: 10px 15% 10px -30%;
-  padding: 10px;
+  top: 10%;
+  right: 5%;
+  width: 25%;
+}
+
+#cover img {
+  width: 700px;
 }
 
 #event-quote {
-  width: 700px;
+  max-width: 700px;
   border: 1px solid grey;
   justify-self: center;
   text-align: center;
-  grid-row: 3;
-  grid-column: 1 / 2;
-  margin: 20px;
+  height: auto;
+  margin: 7%;
+  border-radius: 7px;
+}
+
+#gallery-nav{
+  height: 700px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center
+}
+
+.photo-nav-button {
+  position: relative;
+  width: 250px;
+}
+
+.photo-nav-button img {
+  width: 250px;
+  height: 250px;
+}
+
+.photo-nav-button p {
+  position: absolute;
+  top: 70px;
+  left: 70px;
+  text-emphasis: none;
+  color: rgb(66, 66, 66)
+}
+
+.photo-nav-button:hover {
+  opacity: .5;
+  cursor: pointer;
 }
 
 #photo-gallery {
@@ -149,21 +178,23 @@ code {
     display: inline-block;
   }
   
-  #home-body h1 {
+  #cover {
     display: inline-block;
+    align-items: center;
+    justify-items: center;
+    width:300px
   }
-  
-  #home-body img {
-    max-width: 320px;
-    display: inline-block;
-    margin: 10px;
+
+  #cover img {
+    width: 320px;
   }
-  
+
   #mission-statement {
+    position: relative;
     display: inline-block;
     align-self: center;
     justify-self: center;
-    max-width: 320px;
+    width: 320px;
     margin: 10px;
     padding: 0;
   }
@@ -172,6 +203,10 @@ code {
     display: inline-block;
     width: 320px;
     margin: 10px;
+  }
+
+  #gallery-nav {
+    height: 800px;
   }
 
   #photo-gallery {
