--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,6 +66,7 @@ code {
   cursor: pointer;
 }
 
+
 #home-body {
   display: flex;
   flex-direction: column;
@@ -93,7 +94,7 @@ code {
 }
 
 #event-quote {
-  width: 700px;
+  width: 696px;
   border: 2px solid #e94b02;
   justify-self: center;
   text-align: center;
@@ -103,6 +104,7 @@ code {
   margin-top: 10px;
   border-radius: 7px;
 }
+
 
 #gallery-nav{
   height: 700px;
@@ -131,6 +133,7 @@ code {
   opacity: .5;
   cursor: pointer;
 }
+
 
 #photo-gallery {
   display: flex;
@@ -170,6 +173,11 @@ code {
   margin: auto;
   display: block;
   width: auto;
+}
+
+.description {
+  color: white;
+  text-align: center
 }
 
 @keyframes zoom {
