--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .yellow{
-  color: #e98502;
+  color: #253d25;
 }
 
 .indent{
@@ -67,7 +67,7 @@ code {
 
 #head {
   background-color: #f2c993;
-  color: #253d25;
+  color: #3d644a;
   text-align: center;
   margin-top: 0;
 }
@@ -83,7 +83,7 @@ code {
   height: 60px;
   width: 100px;
   border-radius: 15px;
-  background-color: #3d644a;
+  background-image: linear-gradient(#3d644a, #b5ceb5, #3d644a, #253d25) ;
   border-right: 2px solid #253d25;
   border-bottom: 2px solid #253d25;
   border-left: 2px solid #8fbe8f;
@@ -163,6 +163,7 @@ code {
   cursor: pointer;
 }
 
+/*photo gallery shenanigans*/
 
 #photo-gallery {
   display: flex;
@@ -250,6 +251,7 @@ code {
   text-align: center;
 }
 
+/*For mobile reactiveness*/
 
 @media screen and (max-width: 736px) {
   
