centered about subtitles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -251,6 +251,10 @@ code {
   text-align: center;
 }
 
+.desc-subtitle {
+  text-align: center;
+}
+
 /*For mobile reactiveness*/
 
 @media screen and (max-width: 736px) {
