--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,6 +100,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: .9vh
 }
 
 #cover {
@@ -248,10 +249,6 @@ code {
 }
 
 .corner-school-desc h2{
-  text-align: center;
-}
-
-.desc-subtitle {
   text-align: center;
 }
 
