--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,7 +100,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: .9vh
+  min-height: 90vh
 }
 
 #cover {
