--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,7 +191,7 @@ code {
   padding-top: 30px;
   left: 0;
   top: 0;
-  width: 100%;
+  max-width: 100vw;
   height: 100%;
   overflow: auto;
   background-color: rgb(0,0,0);
