--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,7 +191,7 @@ code {
   padding-top: 30px;
   left: 0;
   top: 0;
-  max-width: 100vw;
+  width: 100%;
   height: 100%;
   overflow: auto;
   background-color: rgb(0,0,0);
@@ -201,7 +201,7 @@ code {
 .modal-content {
   margin: auto;
   display: block;
-  width: auto;
+  max-width: 100vw;
 }
 
 .description {
