--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,7 +114,7 @@ code {
   background-color: white;
   opacity: .7;
   top: 10%;
-  right: 5%;
+  left: 5%;
   width: 25%;
   border-radius: 5px;
 }
