--- a/client/src/App.css
+++ b/client/src/App.css
@@ -111,42 +111,41 @@ code {
 /*-------------Home Page-----------------*/
 
 #home-body {
+  background-image: url("./media/image2_1.jpeg");
+  height: 65vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 90vh
-}
-
-#cover {
-  margin: 20px 10%;
-  position: relative;
+  justify-content: space-around;
 }
 
 #mission-statement {
-  position: absolute;
+
+  width: 60vw
+}
+
+#mission-statement > p {
+  margin: 0;
+  font-size: 1.6rem;
+  background-color: rgba(255, 255, 255, 0.4);
   text-align: center;
-  background-color: white;
-  opacity: .7;
-  top: 10%;
-  left: 5%;
-  width: 25%;
   border-radius: 5px;
 }
 
-#cover img {
-  width: 700px;
+#event-quote {
+  font-size: 1.2rem;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  max-width: 55vw;
+  border: 1px #e94b02 solid
 }
 
-#event-quote {
-  width: 696px;
-  border: 2px solid #e94b02;
-  justify-self: center;
-  text-align: center;
-  height: auto;
-  margin: 7%;
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 7px;
+.fade-in {
+  transition: opacity 1s ease;
+}
+.fade-out {
+  opacity: 0;
+  transition: opacity 1s ease;
 }
 
 /*----------------Gallery Entry-------------------*/
