--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,20 +9,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.yellow{
+.yellow {
   color: #253d25;
 }
 
-.indent{
+.indent {
   text-indent: 30px;
 }
 
-*{
-  font-family: baskerville
+* {
+  font-family: baskerville;
 }
 
-p{
-  font-family: Arial, Helvetica, sans-serif
+p {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 code {
@@ -43,30 +43,38 @@ code {
 .attribution {
   display: inline-block;
   background-color: #f2c993;
-  font-size: .5rem;
+  font-size: 0.5rem;
   height: 100%;
-  width: 100%
+  width: 100%;
 }
 
 #contact {
-  height:65px;
+  height: 65px;
   width: 85px;
-  font-size: 20px
+  font-size: 20px;
 }
 
 #fb-img {
   height: 65px;
 }
 
-#contact:hover{
-  cursor:pointer;
+#contact:hover {
+  cursor: pointer;
 }
 
-#facebook-button:hover{
+#facebook-button:hover {
   cursor: pointer;
 }
 
 /*---------------Header----------------*/
+
+#head {
+  background-color: #f2c993;
+  color: #3d644a;
+  text-align: center;
+  padding-top: 8vh;
+  margin-top: 0;
+}
 
 .head-bar {
   background-color: #e94b02;
@@ -74,13 +82,6 @@ code {
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-
-#head {
-  background-color: #f2c993;
-  color: #3d644a;
-  text-align: center;
-  margin-top: 0;
 }
 
 #head h1 {
@@ -96,7 +97,7 @@ code {
   height: 60px;
   width: 100px;
   border-radius: 15px;
-  background-image: linear-gradient(325deg, #3d644a, #3d644a, #b5ceb5, #253d25) ;
+  background-image: linear-gradient(325deg, #3d644a, #3d644a, #b5ceb5, #253d25);
   border-right: 2px solid #253d25;
   border-bottom: 2px solid #253d25;
   border-left: 2px solid #8fbe8f;
@@ -104,7 +105,7 @@ code {
 }
 
 .nav-button:hover {
-  opacity: .5;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -120,8 +121,7 @@ code {
 }
 
 #mission-statement {
-
-  width: 60vw
+  width: 60vw;
 }
 
 #mission-statement > p {
@@ -133,11 +133,12 @@ code {
 }
 
 #event-quote {
+  height: 3rem;
   font-size: 1.2rem;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 5px;
   max-width: 55vw;
-  border: 1px #e94b02 solid
+  border: 1px #e94b02 solid;
 }
 
 .fade-in {
@@ -150,12 +151,12 @@ code {
 
 /*----------------Gallery Entry-------------------*/
 
-#gallery-nav{
+#gallery-nav {
   height: 700px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  align-items: center
+  align-items: center;
 }
 
 .photo-nav-button {
@@ -170,11 +171,11 @@ code {
 
 .photo-nav-button p {
   text-align: center;
-  color: rgb(66, 66, 66)
+  color: rgb(66, 66, 66);
 }
 
 .photo-nav-button:hover {
-  opacity: .5;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -194,7 +195,7 @@ code {
 }
 
 .thumb:hover {
-  opacity: .5;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -207,8 +208,8 @@ code {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal-content {
@@ -219,12 +220,16 @@ code {
 
 .description {
   color: white;
-  text-align: center
+  text-align: center;
 }
 
 @keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 .close {
@@ -263,14 +268,13 @@ code {
   margin: 20px;
 }
 
-.corner-school-desc h2{
+.corner-school-desc h2 {
   text-align: center;
 }
 
 /*----------For mobile responsiveness(ish)--------*/
 
 @media screen and (max-width: 736px) {
-  
   .foot-bar {
     background-color: #f2c993;
     display: flex;
@@ -279,7 +283,7 @@ code {
     align-items: center;
     justify-self: center;
   }
-  
+
   .head-bar {
     background-color: #f2c993;
     height: 350px;
@@ -289,16 +293,16 @@ code {
     align-items: center;
     justify-self: center;
   }
-  
+
   #home-body {
     display: inline-block;
   }
-  
+
   #cover {
     display: inline-block;
     align-items: center;
     justify-items: center;
-    width:300px
+    width: 300px;
   }
 
   #cover img {
@@ -311,12 +315,12 @@ code {
     align-self: center;
     justify-self: center;
     background-color: white;
-    opacity: .7;
+    opacity: 0.7;
     width: 320px;
     margin: 10px;
     padding: 0;
   }
-  
+
   #event-quote {
     display: inline-block;
     width: 320px;
@@ -332,7 +336,7 @@ code {
     margin-top: 20px;
   }
 
-  .thumb{
+  .thumb {
     width: 100%;
     height: auto;
   }
@@ -342,7 +346,7 @@ code {
     float: none;
     width: 100%;
   }
-  
+
   #csrc-img {
     display: inline-block;
     float: none;
