--- a/client/src/App.css
+++ b/client/src/App.css
@@ -149,6 +149,43 @@ code {
   transition: opacity 1s ease;
 }
 
+/* --------------Announcement Box---------------- */
+
+#event-container {
+  width: 60vw;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  padding: 15px 3vw;
+  border: 1px #e94b02 solid;
+}
+
+#event-container.closed button {
+  position: absolute;
+  bottom: 10px;
+  left: 30vw;
+  right: 30vw
+}
+
+#event-container h3 {
+  text-align: center;
+}
+
+#event-container.closed {
+  position: relative;
+  max-height: 250px;
+  overflow: hidden;
+}
+
+#event-container.open {
+  position: absolute;
+  top: 10vh;
+  left: 15vw;
+  right: 15vw;
+  width: auto;
+  z-index: 7;
+  background-color: rgb(255, 255, 255);
+}
+
 /*----------------Gallery Entry-------------------*/
 
 #gallery-nav {
