--- a/client/src/App.css
+++ b/client/src/App.css
@@ -149,6 +149,22 @@ code {
   transition: opacity 1s ease;
 }
 
+.event-display {
+  display:flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.event-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+  font-size: 1.4rem;
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 1px #e94b02 solid;
+  max-width: 25vw;
+}
 /* --------------Announcement Box---------------- */
 
 #event-container {
