--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,7 +113,7 @@ code {
 
 #home-body {
   background-image: url("./media/image2_1.jpeg");
-  height: 65vh;
+  min-height: 65vh;
   display: flex;
   flex-direction: column;
   align-items: center;
