--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,6 +165,7 @@ code {
   background-color: rgba(255, 255, 255, 0.6);
   border: 1px #e94b02 solid;
   max-width: 25vw;
+  margin: 10px 0;
 }
 /* --------------Announcement Box---------------- */
 
